added wildcard SSL certs

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -129,8 +129,8 @@ http {
 
      ## SSL Certs (specific to this URL)
       ssl on;
-      ssl_certificate /root/agoodcloud.com.chained.crt;
-      ssl_certificate_key /root/agoodcloud.com.key;
+      ssl_certificate /root/wildcard-chained.agoodcloud.com.crt;
+      ssl_certificate_key /root/wildcard.agoodcloud.com.key;
 
      ## Strict Transport Security (ForceHTTPS)
       add_header Strict-Transport-Security "max-age=2592000; includeSubdomains";
