--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -77,22 +77,18 @@ http {
 
  ## Redirect http to https
   server {
-      add_header Cache-Control "public, must-revalidate";
-      access_log  /var/log/nginx/access.log main;
-      error_log   /var/log/nginx/error.log info;
-      expires     90d;
       listen      80;
       root        /var/empty;
       server_name agoodcloud.com www.agoodcloud.com agoodcloud.org www.agoodcloud.org agoodcloud.net www.agoodcloud.net;
-
-      location / {
-        if ($host ~* ^(agoodcloud\.com|www\.agoodcloud\.com|agoodcloud\.org|www\.agoodcloud\.org|agoodcloud\.net|www\.agoodcloud\.net)$ ) {
-          rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
-        }
-        return 444;
-      }
+      rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
   }
-
+  server {
+      listen      80;
+      root        /var/empty;
+      server_name "~^(?<name>\w\d+)\.agoodcloud\.com$";
+      rewrite ^(.*) https://$host$1 permanent;
+  }  
+## digitalmycelium
   server  {
         listen  80;
         server_name  digitalmycelium.com www.digitalmycelium.com;
@@ -125,7 +121,7 @@ http {
       listen      443;
       root        /var/www/mycelium.git;
       server_name_in_redirect off;
-      server_name  agoodcloud.com www.agoodcloud.com;
+      server_name  agoodcloud.com *.agoodcloud.com;
 
      ## SSL Certs (specific to this URL)
       ssl on;
@@ -162,16 +158,16 @@ http {
      #}
 
      ## Redirect from non-www to www
-     if ($host = 'www.agoodcloud.com' ) {
-       rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
+     if ($host = 'agoodcloud.com' ) {
+       rewrite  ^/(.*)$  https://www.agoodcloud.com/$1  permanent;
      }
 
      ## Stop Image and Document Hijacking
-      location ~* (\.jpg|\.gif|\.png|\.css)$ {
-        if ($http_referer !~ ^(https://agoodcloud.com) ) {
-          return 444;
-        }
-      }
+     #location ~* (\.jpg|\.gif|\.png|\.css)$ {
+     #  if ($http_referer !~ ^(https://agoodcloud.com) ) {
+     #    return 444;
+     #  }
+     #}
 
       error_page      502  /502.html;
       location = /502.html {
