all but marketing site tests pass

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -91,7 +91,7 @@ http {
 ## digitalmycelium
   server  {
         listen  80;
-        server_name  digitalmycelium.com www.digitalmycelium.com;
+        server_name  digitalmycelium.com *.digitalmycelium.com;
         server_name_in_redirect off;
         auth_basic   "Restricted";
         auth_basic_user_file  /var/www/mycelium.git/config.dist/digitalmycelium_htpasswd;
