tweak to stable & nginx

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -85,7 +85,7 @@ http {
   server {
       listen      80;
       root        /var/empty;
-      server_name "~^(?<name>\w\d+)\.agoodcloud\.com$";
+      server_name ~^(?<name>\w\d+)\.agoodcloud\.com$;
       rewrite ^(.*) https://$host$1 permanent;
   }  
 ## digitalmycelium
