--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -49,7 +49,7 @@ django-picklefield==0.1.9
 CherryPy==3.1.2
 Django==1.2.5
 Fabric==0.9.3
-GitPython==0.3.1
+gitpython==0.3.1
 MySQL-python==1.2.3
 South==0.7.3
 amqplib==0.6.1
