--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -79,7 +79,7 @@ http {
   server {
       listen      80;
       root        /var/empty;
-      server_name agoodcloud.com www.agoodcloud.com agoodcloud.org www.agoodcloud.org agoodcloud.net www.agoodcloud.net;
+      server_name agoodcloud.org www.agoodcloud.org agoodcloud.net www.agoodcloud.net;
       rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
   }
   server {
@@ -103,6 +103,7 @@ http {
   
         location / {
                 proxy_pass      http://127.0.0.1:8000; 
+                proxy_set_header Host             $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
@@ -124,9 +125,9 @@ http {
       server_name  agoodcloud.com *.agoodcloud.com;
 
      ## SSL Certs (specific to this URL)
-      ssl on;
-      ssl_certificate /root/wildcard-chained.agoodcloud.com.crt;
-      ssl_certificate_key /root/wildcard.agoodcloud.com.key;
+     # ssl on;
+     # ssl_certificate /root/wildcard-chained.agoodcloud.com.crt;
+     # ssl_certificate_key /root/wildcard.agoodcloud.com.key;
 
      ## Strict Transport Security (ForceHTTPS)
       add_header Strict-Transport-Security "max-age=2592000; includeSubdomains";
