renaming admin pages, adding SSL back to nginx

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -125,9 +125,9 @@ http {
       server_name  agoodcloud.com *.agoodcloud.com;
 
      ## SSL Certs (specific to this URL)
-     # ssl on;
-     # ssl_certificate /root/wildcard-chained.agoodcloud.com.crt;
-     # ssl_certificate_key /root/wildcard.agoodcloud.com.key;
+      ssl on;
+      ssl_certificate /root/wildcard-chained.agoodcloud.com.crt;
+      ssl_certificate_key /root/wildcard.agoodcloud.com.key;
 
      ## Strict Transport Security (ForceHTTPS)
       add_header Strict-Transport-Security "max-age=2592000; includeSubdomains";
