--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -124,10 +124,10 @@ http {
       server_name_in_redirect off;
       server_name  agoodcloud.com *.agoodcloud.com;
 
-     ## SSL Certs (specific to this URL)
-      ssl on;
-      ssl_certificate /root/wildcard-chained.agoodcloud.com.crt;
-      ssl_certificate_key /root/wildcard.agoodcloud.com.key;
+     ### SSL Certs (specific to this URL)
+     # ssl on;
+     # ssl_certificate /root/wildcard-chained.agoodcloud.com.crt;
+     # ssl_certificate_key /root/wildcard.agoodcloud.com.key;
 
      ## Strict Transport Security (ForceHTTPS)
       add_header Strict-Transport-Security "max-age=2592000; includeSubdomains";
