--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ media/_cache
 media/_goodcloud_people
 media/_logos
 mycelium/"
+source/goodcloud potential icons/Financial.set
+source/goodcloud potential icons/fatcow-hosting-icons-2000
+
