--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -126,7 +126,7 @@ http {
 
      ## SSL Certs (specific to this URL)
       ssl on;
-      ssl_certificate /root/wildcard-chained.agoodcloud.com.crt;
+      ssl_certificate /root/wildcard.agoodcloud.com.chained.crt;
       ssl_certificate_key /root/wildcard.agoodcloud.com.key;
 
      ## Strict Transport Security (ForceHTTPS)
