--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -109,9 +109,12 @@ http {
         }
 
   
-        location /media/ {
-                root /var/www/mycelium.git;
-        }
+        # location /media/ {
+        #         root /var/www/mycelium.git;
+        # }
+	    location /admin-media/ {
+	          root /var/www/mycelium.git/media/_admin;
+	    }        
   }
 
   server {
@@ -198,9 +201,9 @@ http {
      #  proxy_pass http://goodcloud.posterous.com/;
      #}
 
-     #location /media/ {
-     #        root /var/www/mycelium.git;
-     #}
+     location /admin-media/ {
+           root /var/www/mycelium.git/media/_admin;
+     }
     
      ## All other errors get the generic error page
      #error_page 400 401 402 403 404 405 406 407 408 409 410 411 412 413 414 415 416 417 495 496 497
