--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -112,9 +112,11 @@ http {
         # location /media/ {
         #         root /var/www/mycelium.git;
         # }
+
+
 	    location /admin-media/ {
-	          root /var/www/mycelium.git/media/_admin;
-	    }        
+	          alias /var/www/mycelium.git/media/_admin/;
+	    }   
   }
 
   server {
