goodcloud nginx, test task decorated

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -204,7 +204,7 @@ http {
      #}
 
      location /admin-media/ {
-           root /var/www/mycelium.git/media/_admin;
+           root /var/www/mycelium.git/media/_admin/;
      }
     
      ## All other errors get the generic error page
