--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+pip > 1.0
 fabric
+mercurial
 #psycopg2
 mysql-python
 python-dateutil <2.0
@@ -48,6 +50,7 @@ django-ses
 -e hg+https://bitbucket.org/david/django-storages#egg=storages
 django-mediasync
 slimmer
+
 gitpython
 django-debug-toolbar
 -e git://github.com/gintas/django-picklefield.git#egg=django-picklefield
