switched to django-balancer

--- a/requirements.txt
+++ b/requirements.txt
@@ -56,3 +56,4 @@ django-debug-toolbar
 -e git://github.com/gintas/django-picklefield.git#egg=django-picklefield
 -e git://github.com/tkaemming/django-subdomains.git#egg=django-subdomains
 johnny-cache
+django-balancer
