--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -1,3 +1,4 @@
+mercurial==1.8.3
 #psycopg2
 python-dateutil==1.5
 
@@ -10,10 +11,10 @@ pyparsing==1.5.5
 django-xmlrpc==0.1.3
 akismet==0.2.0
 BeautifulSoup==3.2.0
--e git://github.com/skoczen/django-form-designer.git@b9d1716acbda950e440fb13e877d3836e7b0a124#egg=form_designer-3-py2.6-dev
+-e git://github.com/skoczen/django-form-designer.git@b9d1716acbda950e440fb13e877d3836e7b0a124#egg=form_designer-dev
 
 django-extensions==0.6
--e git://github.com/skoczen/qi-toolkit.git@2f392c9029232c5e496d3b010a0c34ac01f536b1#egg=qi_toolkit-0.7-py2.6-dev
+-e git://github.com/skoczen/qi-toolkit.git@81c2a1e28f59191429850b42d20421504b4d1618#egg=qi_toolkit-dev
 python-crontab==0.9.5
 django-analytical==0.8.1
 
@@ -26,14 +27,14 @@ ipython==0.10.1
 django-nose==0.1.2
 nose-exclude==0.1.5
 django-nose-selenium==0.6
--e git://github.com/Almad/django-sane-testing.git@f2a3f139a11c46dda26a91d87c74eb5916c3addf#egg=djangosanetesting-0.5.10-py2.6-dev
+-e git://github.com/Almad/django-sane-testing.git@f2a3f139a11c46dda26a91d87c74eb5916c3addf#egg=djangosanetesting-dev
 celery==2.2.2
 django-celery==2.2.2
--e git://github.com/kmmbvnr/django-jenkins.git@a302b8072d27a141ca38035c73828c21f4fbabd6#egg=django_jenkins-0.11.0-py2.6-dev
+-e git://github.com/kmmbvnr/django-jenkins.git@a302b8072d27a141ca38035c73828c21f4fbabd6#egg=django_jenkins-dev
 coverage==3.4
--e git://github.com/skoczen/nose-xcover.git@cccc0e83ce2ed117903768587177a937c144e152#egg=nosexcover-1.0.4-py2.6-dev
+-e git://github.com/skoczen/nose-xcover.git@cccc0e83ce2ed117903768587177a937c144e152#egg=nosexcover-dev
 
--e hg+https://django-dumpdb.googlecode.com/hg/django-dumpdb@701c65cd9690a7ab28db39397f489b5b966163bd#egg=django_dumpdb-tip
+-e hg+https://django-dumpdb.googlecode.com/hg/django-dumpdb@701c65cd9690a7ab28db39397f489b5b966163bd#egg=django_dumpdb-dev
 
 django-taggit==0.9.2
 django-taggit-templatetags==0.4.6dev
@@ -42,11 +43,14 @@ django-ses==0.1
 #django-storages
 django-mediasync==2.1.0
 slimmer==0.1.30
+
 django-debug-toolbar==0.8.4
 django-picklefield==0.1.9
 -e git://github.com/tkaemming/django-subdomains.git#egg=django-subdomains==1.1.1
 GitPython
+
 johnny-cache==0.3.1
+django-balancer==0.3
 ## The following requirements were added by pip --freeze:
 CherryPy==3.1.2
 Django==1.2.5
@@ -58,13 +62,13 @@ anyjson==0.3.1
 async==0.6.1
 django-classy-tags==0.3.3.1
 django-mailer==0.1.0
--e hg+https://bitbucket.org/david/django-storages@704255ad8565fcbcb8c7a628e9204ae820cc6a1c#egg=django_storages-tip
+-e hg+https://bitbucket.org/david/django-storages@704255ad8565fcbcb8c7a628e9204ae820cc6a1c#egg=django_storages-dev
 django-tagging==0.3.1
 django-templatetag-sugar==0.1
 docutils==0.6
 ghettoq==0.4.5
 gitdb==0.5.2
--e git://github.com/clintecker/django-google-analytics.git@e835a1e1a0eb7d2ce3008daea65c64ad2b539f98#egg=google_analytics-0.2-py2.6-dev
+-e git://github.com/clintecker/django-google-analytics.git@e835a1e1a0eb7d2ce3008daea65c64ad2b539f98#egg=google_analytics-dev
 importlib==1.0.2
 kombu==1.1.2
 logilab-astng==0.21.1
