--- a/requirements.txt
+++ b/requirements.txt
@@ -57,3 +57,4 @@ django-debug-toolbar
 -e git://github.com/tkaemming/django-subdomains.git#egg=django-subdomains
 johnny-cache
 django-balancer
+django-sentry
