updated nginx protocol to include sslv3

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -26,7 +26,7 @@ http {
  ## Global SSL options
   ssl_ciphers HIGH:!ADH:!MD5;
   ssl_prefer_server_ciphers on;
-  ssl_protocols TLSv1;
+  ssl_protocols SSLv3 TLSv1;
   ssl_session_cache shared:SSL:10m;
   ssl_session_timeout 5m;
 
