added paths to js and css files, switched back to $(function(){.  Still have some issues with JS dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ mycelium/"
 source/goodcloud potential icons/Financial.set
 source/goodcloud potential icons/fatcow-hosting-icons-2000
 media/_admin
+media/.admin
