--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -115,7 +115,7 @@ http {
 
 
 	    location /admin-media/ {
-	          alias /var/www/mycelium.git/media/_admin/;
+	          alias /var/www/mycelium.git/media/.admin/;
 	    }   
   }
 
@@ -204,7 +204,7 @@ http {
      #}
 
      location /admin-media/ {
-           root /var/www/mycelium.git/media/_admin/;
+           root /var/www/mycelium.git/media/.admin/;
      }
     
      ## All other errors get the generic error page
