--- a/requirements.txt
+++ b/requirements.txt
@@ -40,8 +40,6 @@ django-celery
 coverage >= 3.4
 -e git://github.com/skoczen/nose-xcover.git#egg=nosexcover
 
--e hg+https://django-dumpdb.googlecode.com/hg/django-dumpdb#egg=django_dumpdb
-
 django-taggit
 django-taggit-templatetags
 boto
@@ -58,3 +56,4 @@ django-debug-toolbar
 johnny-cache
 django-balancer
 django-sentry
+redis
