update to saner git release

--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ django-ses
 django-mediasync
 slimmer
 
+gitpython
 django-debug-toolbar
 -e git://github.com/gintas/django-picklefield.git#egg=django-picklefield
 -e git://github.com/tkaemming/django-subdomains.git#egg=django-subdomains
