--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -15,7 +15,7 @@ BeautifulSoup==3.2.0
 -e git://github.com/GoodCloud/django-ajax-uploader.git@67d66d67598a23339944662a9bf54f68198c1234#egg=ajaxuploader-dev
 
 django-extensions==0.6
--e git://github.com/skoczen/qi-toolkit.git@d1c8d2ebfacdd3ca4319583c6c957f7b73e98af7#egg=qi_toolkit-dev
+-e git://github.com/skoczen/qi-toolkit.git@d890b95fc5c452696c10c63c4146fe359f6cdbde#egg=qi_toolkit-dev
 python-crontab==0.9.6
 django-analytical==0.8.1
 
@@ -46,6 +46,7 @@ slimmer==0.1.30
 django-debug-toolbar==0.8.5
 django-picklefield==0.1.9
 -e git://github.com/tkaemming/django-subdomains.git#egg=django-subdomains==1.1.1
+gitpython
 
 johnny-cache==0.3.1
 django-balancer==0.3
