--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -187,7 +187,9 @@ http {
               proxy_set_header   X-Real-IP        $remote_addr;
               proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
               proxy_set_header   X-Forwarded-Proto https;
-              
+              proxy_connect_timeout 60s;
+              proxy_read_timeout 60s;
+
               #proxy_set_header X-Real-IP $remote_addr;
               #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
               #proxy_set_header HTTP_X_FORWARDED_PROTO https;
