trying an nginx /media fix

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -205,6 +205,10 @@ http {
      #  proxy_pass http://goodcloud.posterous.com/;
      #}
 
+     location /media/ {
+           root /var/www/mycelium.git/media/;
+     }
+
      location /admin-media/ {
            root /var/www/mycelium.git/media/.admin/;
      }
