updated nginx for digitalmycelium

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -109,9 +109,9 @@ http {
         }
 
   
-        # location /media/ {
-        #         root /var/www/mycelium.git;
-        # }
+        location /media/ {
+                 root /var/www/mycelium.git;
+        }
 
 
 	    location /admin-media/ {
