--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -100,6 +100,14 @@ http {
         location = /502.html {
                root   /var/www/mycelium.git/mycelium/templates;
         }
+
+        location /media/ {
+                 root /var/www/mycelium.git/media/;
+        }
+
+	    location /admin-media/ {
+	          alias /var/www/mycelium.git/media/.admin/;
+	    }   
   
         location / {
                 proxy_pass      http://127.0.0.1:8000; 
@@ -109,14 +117,8 @@ http {
         }
 
   
-        location /media/ {
-                 root /var/www/mycelium.git;
-        }
 
 
-	    location /admin-media/ {
-	          alias /var/www/mycelium.git/media/.admin/;
-	    }   
   }
 
   server {
