--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -102,7 +102,7 @@ http {
         }
 
         location /media/ {
-                 root /var/www/mycelium.git/media/;
+              alias /var/www/mycelium.git/media/;
         }
 
 	    location /admin-media/ {
@@ -208,11 +208,11 @@ http {
      #}
 
      location /media/ {
-           root /var/www/mycelium.git/media/;
+           alias /var/www/mycelium.git/media/;
      }
 
      location /admin-media/ {
-           root /var/www/mycelium.git/media/.admin/;
+           alias /var/www/mycelium.git/media/.admin/;
      }
     
      ## All other errors get the generic error page
