--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -12,7 +12,7 @@ django-xmlrpc==0.1.3
 akismet==0.2.0
 BeautifulSoup==3.2.0
 # -e git://github.com/skoczen/django-form-designer.git#egg=form_designer
--e git://github.com/GoodCloud/django-ajax-uploader.git@f9eaf5c694692176b4e47d707356f25b495e1e71#egg=ajaxuploader-dev
+-e git://github.com/GoodCloud/django-ajax-uploader.git@cbd501856cc475fb285ba4394d48103d3976c5b5#egg=ajaxuploader-dev
 
 django-extensions==0.6
 -e git://github.com/skoczen/qi-toolkit.git@de8a44d893559582b4a90776f1384cb98f14d579#egg=qi_toolkit-dev
@@ -53,6 +53,10 @@ redis==2.2.4
 xlwt==0.7.2
 xlrd==0.7.1
 xlutils==1.4.1
+# mezzanine
+# django-grappelli
+# django-filebrowser
+
 ## The following requirements were added by pip --freeze:
 CherryPy==3.2.0
 Django==1.3
