--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -116,8 +116,10 @@ http {
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-  
-
+  		location  /blog/ {
+  			# rewrite      /(.*)  break;
+  			proxy_pass   http://goodcloud.posterous.com;
+  		}
 
   }
 
