--- a/requirements.txt
+++ b/requirements.txt
@@ -68,4 +68,4 @@ django-newsletter
 vobject
 django-tinymce
 chardet
--e git://github.com/davidgit/pychargify.git#egg=pychargify
+-e git://github.com/skoczen/pychargify.git#egg=pychargify
