cleanup, integrating longerusername

--- a/requirements.txt
+++ b/requirements.txt
@@ -69,3 +69,4 @@ vobject
 django-tinymce
 chardet
 -e git://github.com/skoczen/pychargify.git#egg=pychargify
+-e git://github.com/GoodCloud/django-longer-username.git#egg=longerusername
