--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -12,7 +12,7 @@ django-xmlrpc==0.1.3
 akismet==0.2.0
 BeautifulSoup==3.2.0
 # -e git://github.com/skoczen/django-form-designer.git#egg=form_designer
--e git://github.com/GoodCloud/django-ajax-uploader.git@4d8bb95833e976af126e84c5718c2a64d9700266#egg=ajaxuploader-dev
+-e git://github.com/GoodCloud/django-ajax-uploader.git@80a5a9d7bd24528e069ed123369ce8c7e5569ff0#egg=ajaxuploader-dev
 
 django-extensions==0.6
 -e git://github.com/skoczen/qi-toolkit.git@f454285e8f0d080263cbac606b0852367ae0c27e#egg=qi_toolkit-dev
@@ -28,7 +28,7 @@ ipython==0.10.2
 django-nose==0.1.3
 nose-exclude==0.1.5
 django-nose-selenium==0.7
--e git://github.com/Almad/django-sane-testing.git@e2bf9652ee27222936a013445f31564bc90818c4#egg=djangosanetesting-dev
+-e git://github.com/Almad/django-sane-testing.git@c1b21943557747afae9c878ad12423f70925453f#egg=djangosanetesting-dev
 celery==2.2.6
 django-celery==2.2.4
 -e git://github.com/kmmbvnr/django-jenkins.git@e5031e9254e172aff1dee1e92b5e2609235612f9#egg=django_jenkins-dev
@@ -55,7 +55,9 @@ xlrd==0.7.1
 xlutils==1.4.1
 # mezzanine
 # django-grappelli
-# django-filebrowser## The following requirements were added by pip --freeze:
+# django-filebrowser
+-e git://github.com/skoczen/pychargify.git@9db4ca11ab95c8658f99f77e4e8724d7e077a662#egg=pychargify-dev
+## The following requirements were added by pip --freeze:
 CherryPy==3.2.0
 Django==1.3
 Fabric==1.0.1
@@ -67,7 +69,7 @@ anyjson==0.3.1
 async==0.6.1
 django-indexer==0.3.0
 django-paging==0.2.4
--e hg+https://bitbucket.org/david/django-storages@b85568a98f57e71573d0dd0bf403c0b33859dac4#egg=django_storages-dev
+-e hg+https://bitbucket.org/david/django-storages@8f043afb500b4e9bfc6ed27d5225b470caf9b019#egg=django_storages-dev
 django-templatetag-sugar==0.1
 errorhandler==1.1.1
 gitdb==0.5.2
