--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ source/goodcloud potential icons/Financial.set
 source/goodcloud potential icons/fatcow-hosting-icons-2000
 media/_admin
 media/.admin
+static/*
+celerybeat-schedule
