--- a/requirements.txt
+++ b/requirements.txt
@@ -69,3 +69,5 @@ vobject
 django-tinymce
 chardet
 -e git://github.com/skoczen/pychargify.git#egg=pychargify
+pytz  
+-e git://github.com/GoodCloud/django-timezones.git#egg=django-timezones  
