--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -15,7 +15,7 @@ BeautifulSoup==3.2.0
 -e git://github.com/GoodCloud/django-ajax-uploader.git@80a5a9d7bd24528e069ed123369ce8c7e5569ff0#egg=ajaxuploader-dev
 
 django-extensions==0.6
--e git://github.com/skoczen/qi-toolkit.git@f454285e8f0d080263cbac606b0852367ae0c27e#egg=qi_toolkit-dev
+-e git://github.com/skoczen/qi-toolkit.git@420ed97e5d8e069d112023bc1fbc3d3ca42d185a#egg=qi_toolkit-dev
 python-crontab==0.9.6
 django-analytical==0.8.1
 
@@ -56,28 +56,36 @@ xlutils==1.4.1
 # mezzanine
 # django-grappelli
 # django-filebrowser
+
 -e git://github.com/skoczen/pychargify.git@9db4ca11ab95c8658f99f77e4e8724d7e077a662#egg=pychargify-dev
 ## The following requirements were added by pip --freeze:
 CherryPy==3.2.0
 Django==1.3
 Fabric==1.0.1
 GitPython
+Mezzanine==0.11.5
 MySQL-python==1.2.3
 South==0.7.3
 amqplib==0.6.1
 anyjson==0.3.1
 async==0.6.1
+
 django-indexer==0.3.0
 django-paging==0.2.4
--e hg+https://bitbucket.org/david/django-storages@8f043afb500b4e9bfc6ed27d5225b470caf9b019#egg=django_storages-dev
+-e hg+https://bitbucket.org/david/django-storages@d5bd7f41e7dbf341d5879c6150ae40f16e05615c#egg=django_storages-dev
 django-templatetag-sugar==0.1
+-e git://github.com/GoodCloud/django-timezones.git@cff53196b80711a71ca2a1d9bde54205711a3c1d#egg=django_timezones-dev
 errorhandler==1.1.1
+
 gitdb==0.5.2
+
 kombu==1.1.3
 logilab-astng==0.21.1
 logilab-common==0.55.2
+-e git://github.com/GoodCloud/django-longer-username.git@9a0dbb016079b44ed68bdafdafc19fdd14678692#egg=longerusername-dev
 paramiko==1.7.7.1
 pycrypto==2.3
 pylint==0.23.0
+pytz==2011h
 unittest2==0.5.1
 wsgiref==0.1.2
