--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ python-dateutil <2.0
 
 PIL
 python-memcached
-django >=1.3
+django >=1.3.1
 gunicorn
 #django-cms >= 2.1.3
 #django-tinymce
@@ -68,5 +68,7 @@ django-newsletter
 vobject
 django-tinymce
 chardet
--e git://github.com/skoczen/pychargify.git#egg=pychargify
 -e git://github.com/GoodCloud/django-longer-username.git#egg=longerusername
+stripe
+py-bcrypt
+-e git://github.com/GoodCloud/django-zebra.git#egg=zebra
