--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -53,9 +53,6 @@ redis==2.2.4
 xlwt==0.7.2
 xlrd==0.7.1
 xlutils==1.4.1
-# mezzanine
-# django-grappelli
-# django-filebrowser
 
 vobject==0.8.1c
 django-tinymce==1.5.1a2
@@ -64,8 +61,7 @@ chardet==1.0.1
 pycurl==7.19.0
 stripe==1.5.22
 py-bcrypt==0.2
--e git://github.com/GoodCloud/django-zebra.git@7a5c074127b7a0c5c3d0204e3ad23eecb81d3362#egg=zebra-dev
--e git://github.com/GoodCloud/django-functional-tests@caaeb93c2b3ebec6333f87f77fbbf44a9f75975e#egg=functional_tests-dev
+-e git://github.com/GoodCloud/django-functional-tests@7bbf01d00c2ee5b592203ab63693f5d2c665d6d1#egg=functional_tests-dev
 ## The following requirements were added by pip --freeze:
 CherryPy==3.2.0
 Django==1.3.1
@@ -77,20 +73,19 @@ South==0.7.3
 amqplib==0.6.1
 anyjson==0.3.1
 async==0.6.1
-
 django-indexer==0.3.0
 django-paging==0.2.4
 -e hg+https://bitbucket.org/david/django-storages@11bef0c2a4106bbed5b6845544efe7058474891b#egg=django_storages-dev
 django-templatetag-sugar==0.1
 -e git://github.com/GoodCloud/django-timezones.git@cff53196b80711a71ca2a1d9bde54205711a3c1d#egg=django_timezones-dev
+django-zebra==0.4.2
 errorhandler==1.1.1
-
 gitdb==0.5.2
-
 kombu==1.1.3
 logilab-astng==0.21.1
 logilab-common==0.55.2
 paramiko==1.7.7.1
+
 pycrypto==2.3
 pylint==0.23.0
 pytz==2011h
