--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -27,7 +27,7 @@ nose==1.0.0
 ipython==0.10.2
 django-nose==0.1.3
 nose-exclude==0.1.5
-
+# django-nose-selenium
 -e git://github.com/Almad/django-sane-testing.git@1141da51673f2a4ee71793eec695ec38285eb230#egg=djangosanetesting-dev
 celery==2.2.6
 django-celery==2.2.4
@@ -53,7 +53,6 @@ redis==2.2.4
 xlwt==0.7.2
 xlrd==0.7.1
 xlutils==1.4.1
-
 vobject==0.8.1c
 django-tinymce==1.5.1a2
 chardet==1.0.1
@@ -61,12 +60,14 @@ chardet==1.0.1
 pycurl==7.19.0
 stripe==1.5.22
 py-bcrypt==0.2
--e git://github.com/GoodCloud/django-functional-tests@7bbf01d00c2ee5b592203ab63693f5d2c665d6d1#egg=functional_tests-dev
+django-zebra==0.4.2
+-e git://github.com/GoodCloud/django-functional-tests@a4a95c0fb4dca36c85df3689e39e666162cffb94#egg=functional_tests-dev
+pytz==2011h
 ## The following requirements were added by pip --freeze:
 CherryPy==3.2.0
 Django==1.3.1
 Fabric==1.0.1
-GitPython
+GitPython==0.3.2.RC1
 Mezzanine==0.11.5
 MySQL-python==1.2.3
 South==0.7.3
@@ -78,17 +79,14 @@ django-paging==0.2.4
 -e hg+https://bitbucket.org/david/django-storages@11bef0c2a4106bbed5b6845544efe7058474891b#egg=django_storages-dev
 django-templatetag-sugar==0.1
 -e git://github.com/GoodCloud/django-timezones.git@cff53196b80711a71ca2a1d9bde54205711a3c1d#egg=django_timezones-dev
-django-zebra==0.4.2
 errorhandler==1.1.1
 gitdb==0.5.2
 kombu==1.1.3
 logilab-astng==0.21.1
 logilab-common==0.55.2
 paramiko==1.7.7.1
-
 pycrypto==2.3
 pylint==0.23.0
-pytz==2011h
 simplejson==2.1.6
 unittest2==0.5.1
 wsgiref==0.1.2
