fixed celery DNS entry in live yaml

--- a/live.yaml
+++ b/live.yaml
@@ -41,7 +41,7 @@ db-server-slave-1:
 celery-servers:
     directory: /var/www
     hosts:
-        - ext-mycelium-celery-live.agoodcloud.com
+        - ext-mycelium-celery.agoodcloud.com
     services:
         - celeryd-mycelium
 
