--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -1,3 +1,4 @@
+Fabric==1.2.2
 mercurial==1.8.4
 #psycopg2
 python-dateutil==1.5
@@ -12,7 +13,7 @@ django-xmlrpc==0.1.3
 akismet==0.2.0
 BeautifulSoup==3.2.0
 # -e git://github.com/skoczen/django-form-designer.git#egg=form_designer
--e git://github.com/GoodCloud/django-ajax-uploader.git@80a5a9d7bd24528e069ed123369ce8c7e5569ff0#egg=ajaxuploader-dev
+-e git://github.com/GoodCloud/django-ajax-uploader.git@a4dd7ce7353eca930a02c794590139cae48b5e9e#egg=ajaxuploader-dev
 
 django-extensions==0.6
 -e git://github.com/skoczen/qi-toolkit.git@f6bbe98b7af1fa7a7ec41c30ffa192d9009c4460#egg=qi_toolkit-dev
@@ -23,12 +24,12 @@ django-pagination==1.0.7
 sorl-thumbnail==11.05.2
 tagging==0.2.1
 lorem-ipsum-generator==0.3
-nose==1.0.0
+nose==1.1.2
 ipython==0.10.2
 django-nose==0.1.3
 nose-exclude==0.1.5
 # django-nose-selenium
--e git://github.com/Almad/django-sane-testing.git@1141da51673f2a4ee71793eec695ec38285eb230#egg=djangosanetesting-dev
+-e git://github.com/Almad/django-sane-testing.git@cd836896c967ed4887fa21fde5d8b2a8c742998d#egg=djangosanetesting-dev
 celery==2.2.6
 django-celery==2.2.4
 -e git://github.com/kmmbvnr/django-jenkins.git@e5031e9254e172aff1dee1e92b5e2609235612f9#egg=django_jenkins-dev
@@ -63,17 +64,22 @@ py-bcrypt==0.2
 django-zebra==0.4.2
 -e git://github.com/GoodCloud/django-functional-tests@0a13cb63b01891e01330b2d9d9dcbf66674c69c9#egg=functional_tests-dev
 pytz==2011h
+-e git://github.com/GoodCloud/tavutil.git@8055d68d21c24cc79c072e7ded97be3654b738a9#egg=tavutil-dev
+-e git://github.com/GoodCloud/bolt.git@2a940676d81ba7c8a40da6e8b7ca44dc6c3ba390#egg=bolt-dev
+html5lib==0.90
 ## The following requirements were added by pip --freeze:
 CherryPy==3.2.0
 Django==1.3.1
-Fabric==1.0.1
 GitPython==0.3.2.RC1
 Mezzanine==0.11.5
 MySQL-python==1.2.3
+PyYAML==3.10
 South==0.7.3
 amqplib==0.6.1
 anyjson==0.3.1
 async==0.6.1
+django-appconf==0.4.1
+django-cachebuster==0.2.1
 django-indexer==0.3.0
 django-paging==0.2.4
 -e hg+https://bitbucket.org/david/django-storages@11bef0c2a4106bbed5b6845544efe7058474891b#egg=django_storages-dev
@@ -81,12 +87,16 @@ django-templatetag-sugar==0.1
 -e git://github.com/GoodCloud/django-timezones.git@cff53196b80711a71ca2a1d9bde54205711a3c1d#egg=django_timezones-dev
 errorhandler==1.1.1
 gitdb==0.5.2
+ipaddr==2.1.9
 kombu==1.1.3
 logilab-astng==0.21.1
 logilab-common==0.55.2
+optcomplete==1.2-devel
 paramiko==1.7.7.1
 pycrypto==2.3
 pylint==0.23.0
 simplejson==2.1.6
+tornado==2.1.1
 unittest2==0.5.1
 wsgiref==0.1.2
+-e git://github.com/GoodCloud/django_compressor.git@versioned_static#egg=django_compressor
