--- a/requirements.txt
+++ b/requirements.txt
@@ -73,5 +73,5 @@ django-zebra
 pytz
 -e git://github.com/GoodCloud/tavutil.git#egg=tavutil
 -e git://github.com/GoodCloud/bolt.git#egg=bolt
--e git://github.com/GoodCloud/django_compressor.git#egg=django_compressor
+-e git://github.com/GoodCloud/django_compressor.git@versioned_static#egg=django_compressor
 html5lib
