--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,8 @@ slimmer
 django-debug-toolbar
 -e git://github.com/gintas/django-picklefield.git#egg=django-picklefield
 -e git://github.com/tkaemming/django-subdomains.git#egg=django-subdomains
-johnny-cache
+#johnny-cache
+-e hg+https://bitbucket.org/skoczen/johnny-cache#egg=johnny
 django-balancer
 django-sentry
 redis==2.2.4
