--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -45,7 +45,7 @@ slimmer==0.1.30
 
 django-debug-toolbar==0.8.5
 django-picklefield==0.1.9
--e git://github.com/tkaemming/django-subdomains.git#egg=django-subdomains==1.1.1
+django-subdomains==1.1.1
 django-balancer==0.3
 django-sentry==1.13.2
 redis==2.2.4
@@ -65,7 +65,7 @@ django-zebra==0.4.2
 pytz==2011k
 -e git://github.com/GoodCloud/tavutil.git@8055d68d21c24cc79c072e7ded97be3654b738a9#egg=tavutil-dev
 -e git://github.com/GoodCloud/bolt.git@b0063ee2651a25932900cebccae87ae435c297d4#egg=bolt-dev
--e git://github.com/GoodCloud/django_compressor.git@4e86fcec6b6cca07b43afd12356571cdeb92deba#egg=django_compressor-dev
+-e git://github.com/GoodCloud/django_compressor.git@4e86fcec6b6cca07b43afd12356571cdeb92deba#egg=django_compressor-versioned_static
 html5lib==0.90
 ## The following requirements were added by pip --freeze:
 CherryPy==3.2.2
@@ -87,7 +87,9 @@ django-templatetag-sugar==0.1
 -e git://github.com/GoodCloud/django-timezones.git@cff53196b80711a71ca2a1d9bde54205711a3c1d#egg=django_timezones-dev
 errorhandler==1.1.1
 eventlet==0.9.16
+filebrowser-safe==0.1.2
 gitdb==0.5.2
+grappelli-safe==0.1.8
 greenlet==0.3.1
 ipaddr==2.1.9
 -e hg+https://bitbucket.org/skoczen/johnny-cache@c75cf83b71ed126e44d3dbbacf8a32b8c53042e8#egg=johnny_cache-dev
