--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -93,7 +93,7 @@ grappelli-safe==0.1.8
 greenlet==0.3.1
 ipaddr==2.1.9
 -e hg+https://bitbucket.org/skoczen/johnny-cache@c75cf83b71ed126e44d3dbbacf8a32b8c53042e8#egg=johnny_cache-dev
-1==1.4.3
+kombu==1.1.3
 lockfile==0.9.1
 logilab-astng==0.23.0
 logilab-common==0.57.1
