--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
+-e git://github.com/GoodCloud/django-ajax-uploader.git@c9134bc454adad9d8ff83e76c6b7bc928f055b3b#egg=ajaxuploader-dev
+-e git://github.com/skoczen/qi-toolkit.git@e5b5889e9edd7346c5cccf096e389505b21eed37#egg=qi_toolkit-dev
+djangosanetesting==0.5.11
+-e git://github.com/kmmbvnr/django-jenkins.git@e5031e9254e172aff1dee1e92b5e2609235612f9#egg=django_jenkins-dev
+-e git://github.com/skoczen/nose-xcover.git@cccc0e83ce2ed117903768587177a937c144e152#egg=nosexcover-dev
+django-picklefield==0.1.9
+django-subdomains==1.1.2
+-e git://github.com/GoodCloud/django-longer-username.git@cdf0375ec5eadd4a4c12d1c4598e689b8b33a496#egg=longerusername-dev
+-e git://github.com/GoodCloud/django-functional-tests@d7ddf59ace06b64bdf738c7ae952ce0e6b51725f#egg=functional_tests-dev
+-e git://github.com/GoodCloud/tavutil.git@8055d68d21c24cc79c072e7ded97be3654b738a9#egg=tavutil-dev
+-e git://github.com/GoodCloud/bolt.git@b0063ee2651a25932900cebccae87ae435c297d4#egg=bolt-dev
+-e git://github.com/GoodCloud/django_compressor.git@5f054f0140105e29fd664152bc89742dce088c9e#egg=django_compressor-versioned_static
 Fabric==1.3.1
 mercurial==1.9.3
 python-dateutil==1.5
@@ -8,9 +20,7 @@ pyparsing==1.5.6
 django-xmlrpc==0.1.3
 akismet==0.2.0
 BeautifulSoup==3.2.0
--e git://github.com/GoodCloud/django-ajax-uploader.git@c9134bc454adad9d8ff83e76c6b7bc928f055b3b#egg=ajaxuploader-dev
 django-extensions==0.7.1
--e git://github.com/skoczen/qi-toolkit.git@f6bbe98b7af1fa7a7ec41c30ffa192d9009c4460#egg=qi_toolkit-dev
 python-crontab==0.9.6
 django-analytical==0.10.0
 django-pagination==1.0.7
@@ -18,15 +28,12 @@ sorl-thumbnail==11.09
 tagging==0.2.1
 lorem-ipsum-generator==0.3
 nose==1.1.2
+ipython==0.11
 django-nose==0.1.3
 nose-exclude==0.1.7
-# django-nose-selenium
--e git://github.com/Almad/django-sane-testing.git@7f3884a2a340ff2d40ff09214257cf2d8f6f2b9f#egg=djangosanetesting-dev
 celery==2.2.6
 django-celery==2.2.4
--e git://github.com/kmmbvnr/django-jenkins.git@e5031e9254e172aff1dee1e92b5e2609235612f9#egg=django_jenkins-dev
 coverage==3.5.1
--e git://github.com/skoczen/nose-xcover.git@cccc0e83ce2ed117903768587177a937c144e152#egg=nosexcover-dev
 django-taggit==0.9.3
 django-taggit-templatetags==0.4.6dev
 boto==2.0rc1
@@ -34,28 +41,23 @@ django-ses==0.2
 django-storages==1.1.3
 slimmer==0.1.30
 django-debug-toolbar==0.8.5
-django-picklefield==0.1.9
--e git://github.com/tkaemming/django-subdomains.git#egg=django-subdomains==1.1.1
 django-balancer==0.3
 redis==2.2.4
 xlwt==0.7.2
 xlrd==0.7.1
 xlutils==1.4.1
+django-newsletter==0.2.6
 vobject==0.8.1c
 django-tinymce==1.5.1a2
 chardet==1.0.1
--e git://github.com/GoodCloud/django-longer-username.git@cdf0375ec5eadd4a4c12d1c4598e689b8b33a496#egg=longerusername-dev
 pycurl==7.19.0
 stripe==1.5.27
 py-bcrypt==0.2
 django-zebra==0.4.2
--e git://github.com/GoodCloud/django-functional-tests@d7ddf59ace06b64bdf738c7ae952ce0e6b51725f#egg=functional_tests-dev
 pytz==2011k
--e git://github.com/GoodCloud/tavutil.git@8055d68d21c24cc79c072e7ded97be3654b738a9#egg=tavutil-dev
--e git://github.com/GoodCloud/bolt.git@b0063ee2651a25932900cebccae87ae435c297d4#egg=bolt-dev
--e git://github.com/GoodCloud/django_compressor.git@5f054f0140105e29fd664152bc89742dce088c9e#egg=django_compressor-versioned_static
 html5lib==0.90
 ## The following requirements were added by pip --freeze:
+-e git://github.com/PaulUithol/backbone-tastypie.git@dea127c99af91a203037a9a5e5bfaa43f8e558ff#egg=Backbone_tastypie-dev
 CherryPy==3.2.2
 Django==1.3.1
 GitPython==0.3.2.RC1
@@ -70,6 +72,7 @@ django-appconf==0.4.1
 django-cachebuster==0.2.1
 django-indexer==0.3.0
 django-paging==0.2.4
+django-tastypie==0.9.10
 django-templatetag-sugar==0.1
 -e git://github.com/GoodCloud/django-timezones.git@cff53196b80711a71ca2a1d9bde54205711a3c1d#egg=django_timezones-dev
 errorhandler==1.1.1
@@ -79,16 +82,19 @@ gitdb==0.5.2
 grappelli-safe==0.1.8
 greenlet==0.3.1
 ipaddr==2.1.9
--e git://github.com/GoodCloud/johnny-cache.git@b0f39f0bf3afc5cc879589d1e1607eeca1b53e2f#egg=johnny_cache-dev
+-e git://github.com/GoodCloud/johnny-cache.git@5d8bf5d3e5369b7be904812503a69f315504be33#egg=johnny_cache-dev
 kombu==1.1.3
 lockfile==0.9.1
 logilab-astng==0.23.0
 logilab-common==0.57.1
+lxml==2.3.2
+mimeparse==0.1.3
 optcomplete==1.2-devel
 paramiko==1.7.7.1
 pycrypto==2.4
 pylint==0.25.0
 python-daemon==1.6
+python-digest==1.7
 raven==0.6.1
 simplejson==2.2.1
 ssh==1.7.8
