--- a/requirements.unstable.txt
+++ b/requirements.unstable.txt
@@ -1,17 +1,17 @@
 pip > 1.0
-git+https://github.com/GoodCloud/django-ajax-uploader.git#egg=ajaxuploader
-git+https://github.com/skoczen/qi-toolkit.git#egg=qi-toolkit
-git+https://github.com/Almad/django-sane-testing.git#egg=djangosanetesting
-git+https://github.com/kmmbvnr/django-jenkins.git#egg=django-jenkins
-git+https://github.com/skoczen/nose-xcover.git#egg=nosexcover
-git+https://github.com/gintas/django-picklefield.git#egg=django-picklefield
-git+https://github.com/tkaemming/django-subdomains.git#egg=django-subdomains
-git+https://github.com/GoodCloud/johnny-cache.git#egg=johnny
-git+https://github.com/GoodCloud/django-longer-username.git#egg=longerusername
-git+https://github.com/GoodCloud/django-functional-tests#egg=functional_tests
-git+https://github.com/GoodCloud/tavutil.git#egg=tavutil
-git+https://github.com/GoodCloud/bolt.git#egg=bolt
-git+https://github.com/GoodCloud/django_compressor.git@versioned_static#egg=django_compressor
+-e git://github.com/GoodCloud/django-ajax-uploader.git#egg=ajaxuploader
+-e git://github.com/skoczen/qi-toolkit.git#egg=qi-toolkit
+-e git://github.com/Almad/django-sane-testing.git#egg=djangosanetesting
+-e git://github.com/kmmbvnr/django-jenkins.git#egg=django-jenkins
+-e git://github.com/skoczen/nose-xcover.git#egg=nosexcover
+-e git://github.com/gintas/django-picklefield.git#egg=django-picklefield
+-e git://github.com/tkaemming/django-subdomains.git#egg=django-subdomains
+-e git://github.com/GoodCloud/johnny-cache.git#egg=johnny
+-e git://github.com/GoodCloud/django-longer-username.git#egg=longerusername
+-e git://github.com/GoodCloud/django-functional-tests#egg=functional_tests
+-e git://github.com/GoodCloud/tavutil.git#egg=tavutil
+-e git://github.com/GoodCloud/bolt.git#egg=bolt
+-e git://github.com/GoodCloud/django_compressor.git@versioned_static#egg=django_compressor
 Fabric
 mercurial
 mysql-python
