--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ tagging==0.2.1
 lorem-ipsum-generator==0.3
 nose==1.1.2
 django-nose==0.1.3
-nose-exclude==0.1.7
+# nose-exclude==0.1.7
 celery==2.2.6
 django-celery==2.2.4
 coverage==3.5.1
