how about a more explict stop/start?

--- a/live.yaml
+++ b/live.yaml
@@ -8,6 +8,7 @@ app-server-1:
         - 50.16.217.71
     services:
         - mycelium
+        - nginx
 
 app-servers:
     directory: /var/www
@@ -16,6 +17,7 @@ app-servers:
         - 50.16.206.163
     services:
         - mycelium
+        - nginx
 
 db-servers:
     hosts:
