--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Fabric==1.3.1
 mercurial==1.9.3
 python-dateutil==1.5
 PIL==1.1.7
+psycopg2
 python-memcached==1.47
 gunicorn==0.13.4
 pyparsing==1.5.6
