--- a/requirements.unstable.txt
+++ b/requirements.unstable.txt
@@ -9,10 +9,8 @@ pip > 1.0
 -e git://github.com/GoodCloud/johnny-cache.git#egg=johnny
 -e git://github.com/GoodCloud/django-longer-username.git#egg=longerusername
 -e git://github.com/GoodCloud/django-functional-tests#egg=functional_tests
--e git://github.com/GoodCloud/tavutil.git#egg=tavutil
--e git://github.com/GoodCloud/bolt.git#egg=bolt
 -e git://github.com/GoodCloud/django_compressor.git@versioned_static#egg=django_compressor
-Fabric
+fabric
 mercurial
 mysql-python
 python-dateutil <2.0
