--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ git+git://github.com/GoodCloud/django-longer-username.git
 git+git://github.com/GoodCloud/django-functional-tests
 git+git://github.com/GoodCloud/tavutil.git
 git+git://github.com/GoodCloud/bolt.git
-git+git://github.com/GoodCloud/django_compressor.git
+django_compressor=1.1.2
 Fabric==1.3.1
 mercurial==1.9.3
 python-dateutil==1.5
@@ -82,7 +82,6 @@ gitdb==0.5.2
 grappelli-safe==0.1.8
 greenlet==0.3.1
 ipaddr==2.1.9
-git+git://github.com/GoodCloud/johnny-cache.git
 kombu==1.1.3
 lockfile==0.9.1
 logilab-astng==0.23.0
