--- a/requirements.txt
+++ b/requirements.txt
@@ -59,7 +59,7 @@ html5lib==0.90
 ## The following requirements were added by pip --freeze:
 git+git://github.com/PaulUithol/backbone-tastypie.git
 CherryPy==3.2.2
-Django==1.3.1
+django==1.3.1
 GitPython==0.3.2.RC1
 Mezzanine==0.11.5
 MySQL-python==1.2.3
