--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ django-picklefield==0.1.9
 django-subdomains==1.1.2
 git+git://github.com/GoodCloud/django-longer-username.git
 git+git://github.com/GoodCloud/django-functional-tests
-git+git://github.com/GoodCloud/tavutil.git
-git+git://github.com/GoodCloud/bolt.git
+#git+git://github.com/GoodCloud/tavutil.git
+#git+git://github.com/GoodCloud/bolt.git
 git+git://github.com/GoodCloud/django_compressor.git
 Fabric==1.3.1
 mercurial==1.9.3
@@ -101,3 +101,4 @@ ssh==1.7.8
 tornado==2.1.1
 unittest2==0.5.1
 wsgiref==0.1.2
+
