--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ git+git://github.com/kmmbvnr/django-jenkins.git
 git+git://github.com/skoczen/nose-xcover.git
 django-picklefield==0.1.9
 django-subdomains==1.1.2
+django-staticfiles==1.2.1
 git+git://github.com/GoodCloud/django-longer-username.git
 git+git://github.com/GoodCloud/django-functional-tests
 #git+git://github.com/GoodCloud/tavutil.git
 #git+git://github.com/GoodCloud/bolt.git
-git+git://github.com/GoodCloud/django_compressor.git
+#git+git://github.com/GoodCloud/django_compressor.git
+django-compressor==1.1.2
 Fabric==1.3.1
 mercurial==1.9.3
 python-dateutil==1.5
