--- a/requirements.unstable.txt
+++ b/requirements.unstable.txt
@@ -9,7 +9,7 @@ pip > 1.0
 -e git://github.com/GoodCloud/johnny-cache.git#egg=johnny
 -e git://github.com/GoodCloud/django-longer-username.git#egg=longerusername
 -e git://github.com/GoodCloud/django-functional-tests#egg=functional_tests
--e git://github.com/GoodCloud/django_compressor.git@versioned_static#egg=django_compressor
+# -e git://github.com/GoodCloud/django_compressor.git@versioned_static#egg=django_compressor
 fabric
 mercurial
 mysql-python
@@ -18,6 +18,7 @@ PIL
 psycopg2
 python-memcached
 django >=1.3.1
+django-staticfiles
 gunicorn
 pyparsing
 django-xmlrpc
