--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ lorem-ipsum-generator==0.3
 nose==1.1.2
 django-nose==0.1.3
 # nose-exclude==0.1.7
-celery==2.2.6
+celery-with-redis
 django-celery==2.2.4
 coverage==3.5.1
 django-taggit==0.9.3
@@ -44,7 +44,6 @@ django-storages==1.1.3
 slimmer==0.1.30
 django-debug-toolbar==0.8.5
 django-balancer==0.3
-redis==2.2.4
 xlwt==0.7.2
 xlrd==0.7.1
 xlutils==1.4.1
